# chat_server

./: DAILY.md  README.md
VerifyServer/: config.js  config.json  const.js  package-lock.json  package.json  redis.js  server.js
gataServer/: CMakeLists.txt  gate_server.cpp
gataServer/include/: c_server.h  header.h  logic_system.h  singleton.h
gataServer/log/: 1
gataServer/src/: c_server.cpp  http_connection.cpp  logic_system.cpp
gateServer/: CMakeLists.txt  README.md  gate_server.cpp
gateServer/config/: config.ini
gateServer/include/: asio_io_servicepool.h  c_server.h  config_mgr.h  header.h  http_connection.h  rpc_pool.h  singleton.h  verify_grpc_client.h
gateServer/log/: 1
gateServer/proto/: CMakeLists.txt  message.pb.cc  message.pb.h
gateServer/redis/: CMakeLists.txt  test.cpp
gateServer/src/: asio_io_servicepool.cpp  c_server.cpp  http_connection.cpp  logic_system.cpp  rpc_pool.cpp
